--- a/bindu.tex
+++ b/bindu.tex
@@ -82,58 +82,137 @@
 \chapter{Introduction}
 \cleardoublepage
 
-\section{General remarks}
- \phantomsection\label{generalremarks}
- \lettrine{T}{he} \textit{Tattvayogabindu} of Rāmacandra\footnote{A discussion about the author Rāmacandra is found on p. \pageref{ramarama}.} is an early modern Sanskrit text on Rājayoga that was written in the first half of the seventeenth century\footnote{The dating of the text is discussed on p. \pageref{dating}.} in northern India.\footnote{The detailed discussion of the place of origin is found on p. \pageref{riversrivers}, n. \ref{riversrivers}.} The most salient feature of the work that makes it historically significant is its highly differentiated taxonomy of types of yoga.\footnote{This is a remarkable increase in the number of declared yogas compared to the standard medieval tetrad of Mantra, Laya, Haṭha and Rājayoga.} In the \textit{Tattvayogabindu}'s introduction, most manuscripts name fifteen types of yoga, presented as methods of Rājayoga. These are 1. Kriyāyoga, 2. Jñānayoga, 3. Caryāyoga, 4. Haṭhayoga, 5. Karmayoga, 6. Layayoga, 7. Dhyānayoga, 8. Mantrayoga, 9. Lakṣyayoga, 10. Vāsanāyoga, 11. Śivayoga, 12. Brahmayoga, 13. Advaitayoga, 14. Siddhayoga, and 15. Rājayoga itself. The text is a yogic compendium written in a mix of mainly prose and 47 verses in textbook-style, where its 59 topics are introduced in sections most of the time launched by recognizable phrases. The sections deal with the methods of Rājayoga and their effects, but others also cover topics like yogic physiology, the Avadhūta, the importance of the guru, cosmogony, and a \textit{yogaśāstrarahasya}.  
+\section{Stemmatic analysis}
+ \phantomsection\label{stemma}
 
-The \textit{Tattvayogabindu} has not been discussed comprehensively or considered in the secondary literature on yoga. The only exception is \citeauthor{birch2014} (2014: 415–416) who briefly described its list of fifteen yogas in the context of the ``fifteen medieval yogas'' and noted that a similar taxonomy occurs in Nārāyaṇatīrtha’s \textit{Yogasiddhāntacandrikā} (17th century), a commentary on the \textit{Pātañjalayogaśāstra} that integrates fifteen medieval yogas within its \textit{aṣṭāṅga} format. An incomplete account of the fifteen yogas is found within the Sanskrit yoga text \textit{Yogasvarodaya}, which is known only through quotations in the \textit{Prāṇatoṣinī}, the \textit{Yogakarṇikā} and the \emph{Śabdakalpadruma}.\footnote{Manuscripts under the name of \textit{Yogasvarodaya} seem to be lost. I was not able to locate the manuscripts of the text in any manuscript catalogue at hand.} The \textit{Yogasvarodaya} announces a total of fifteen yogas but names only eight of them in its introductory \textit{śloka}s. It is the primary source and template for the compilation of the \textit{Tattvayogabindu}. Besides several passages, Rāmacandra, in many instances, follows its content and structure by rewriting the \textit{Yogasvarodaya}’s \textit{śloka}s into prose or quoting them directly without attribution. Due to the incomplete transmission of the \textit{Yogasvarodaya}, Rāmacandra’s \textit{Tattvayogabindu} is a natural and valuable starting point for an unprecedented in-depth study of the complex early modern yoga taxonomies, a phenomenon that can be narrowed down precisely in terms of time and as I will show regarding its localisation. The other source text that Rāmacandra used is the \textit{Siddhasiddhāntapaddhati} whose content he draws on, particularly in the second half of his composition. Another text that includes an almost similar taxonomy of twelve yogas divided into three tetrads\footnote{See p.\pageref{sarvasarva} for a detailed discussion of the \textit{Sarvāṅgayogapradīpikā}.} is Sundardās’s \textit{Brajbhāṣā} yoga text named \textit{Sarvāṅgayogapradīpikā} which not just shares most of the types of yogas but also provides a different and valuable perspective on the addressed yoga categories.\footnote{For a comparative table of the complex early modern yoga taxonomies see table \ref{tab:complextaxonomies} on p. \pageref{tab:complextaxonomies}.}
+\lettrine{T}{he} stemmatic analysis of the \emph{Tattvayogabindu} for the creation of a \textit{stemma codicum} that represents the relationships between the collated textual witnesses is based on the classical Lachmannian method, supplemented by trees generated with contemporary phylogenetic software to support these observations empirically.\footnote{Certainly, in the case of the \textit{Tattvayogabindu}, reconstructing the \textit{stemma codicum} would have been feasible even manually, given the relatively manageable textual tradition, without yielding fundamentally different results. However, precisely in light of the text's well-preserved and uncontaminated transmission — easily comprehensible to the human mind — the stemmatic analysis of the \emph{Tattvayogabindu}'s textual witnesses conducted here can, in my view, serve as a valuable exemplar. It demonstrates both the utility and the limitations of computer-assisted stemmatics and provides data that can benefit future users of this technology.} The following pages of this section will explain how I construe the \textit{stemma codicum}. 
 
-These complex taxonomies that emerged during the 17th century crossed sectarian divides and were adapted to the specific needs of different authors and traditions. The \textit{Tattvayogabindu} thus encapsulates a large proportion of the diversity of yoga types and teachings after the \textit{Haṭhapradīpikā} (15th century) that were adopted and practised by a broad spectrum of religious traditions and strata of Indian society. In the particular case of the \textit{Tattvayogabindu}, there are various statements throughout the text that reveal a strategy to detach yoga from its ascetic and renunciate connotations and to stylise Rājayoga as a practice that can bring the desired soteriological benefits even to practitioners who enjoy worldly pleasures and expensive lifestyles. Textual evidence suggests that the \textit{Tattvayogabindu} is an important example of a text that provides an early modern adaptation of Rājayoga for \textit{kṣatriya}s in a courtly environment.
+\subsection{Philological observations}
 
-One printed edition of the \textit{Tattvayogabindu} was published in 1905 with a Hindi translation and based on (an) unknown manuscript(s).\footnote{\emph{Binduyoga}. \textit{Binduyogaḥ with Bhāṣaṭīkā}. Ed. by Jvālāprasāda Miśra. Mumbai, 1905.} This publication has the title ``\textit{Binduyoga}'' confirmed by the printed text’s colophon. However, as I will discuss in the introduction, the text was originally known as \textit{Tattvayogabindu}. The consulted manuscripts contain significant discrepancies, structural differences and variant readings between them and the printed edition.\footnote{For example, the printed edition does not contain the complex yoga taxonomy presented in the manuscripts of the \emph{Tattvayogabindu}.} Furthermore, the manuscripts are scattered over the northern half of the Indian subcontinent and Nepal, which suggests that the text was widely transmitted at some point. Lengthy passages of the \textit{Tattvayogabindu} are quoted without attribution in a text called \textit{Yogasaṃgraha} and Sundaradeva’s \textit{Haṭhasaṅketacandrikā}.
+\subsubsection{Macrostructure}
 
-The first chapter of this dissertation contains a general introduction to Rāmacandra's \textit{Tattvayogabindu}. The chapter gives a brief overview of the content of the text and discusses its origin, the author and the author's intended audience. Subsequently, the textual witnesses, source texts and testimonies of the \textit{Tattvayogabindu} are described. A stemmatic analysis of the text is then presented, based on manual philological observation and computer-assisted stemmatics to present a \textit{stemma codicum}. The chapter concludes with a presentation of the editorial policies, which form the basis for the second chapter of this thesis.
-The second chapter, the core of this dissertation, is a critical edition and annotated translation of the \textit{Tattvayogabindu}. The critical edition significantly improves the text and sheds new light on its historical significance.
-The third chapter contains a comparative analysis of the complex early modern yoga taxonomies based on hermeneutics of difference.\footnote{The conceptof hermeneutics of difference is discussed on p. \pageref{hermeneutics}, n. \ref{hemerneutics}.}  Using the new critical edition of the \textit{Tattvayogabindu} and the texts mentioned above, \emph{Yogasvarodaya}, \emph{Yogasiddhāntacandrikā} and \emph{Sarvāṅgayogapradīpikā}, the complex yogic taxonomies of the four texts are compared in detail. Based on this comparative analysis, a differentiated hypothesis on the emergence of the complex yoga taxonomies was developed, and the complex yoga taxonomies were located und explained in the broader context of the historical development of the yoga traditions. The comparison includes a nuanced description of each yoga category used by the authors of the texts with complex yoga taxonomies. While the authors of the four texts often operate with identical terms for the individual yoga categories, they interpret these categories according to their religious backgrounds and agendas, with intriguing and exciting differences. Contrasting the comparanda, i.e. the authors, the texts, the yoga taxonomies and the yoga categories, therefore provides a deep insight into the discursive negotiation processes of the Indian yoga traditions of the 17th century.
+Before collating the manuscripts, I transcribed every single available witness of the \emph{Tattvayogabindu} and arranged the transcriptions synoptically. This approach proved helpful for the critical editing of the \emph{Tattvayogabindu}. The text comprises a mixture of prose and verse. Many prose passages are structurally very similar, with identical beginnings and sentence endings, resulting in virtually no manuscript that does not omit words, sentences, or entire sections due to eye skips caused by the text's arrangement. Additionally, there are frequent instances across the manuscripts in which words, phrases, or even entire passages are transposed. Several manuscripts have substantial \textit{lacunae}. Creating a synoptic comparison of the transcriptions was crucial to maintaining an overview in these cases and reconstructing a text closest to the original. The synoptic comparison reveals the structural differences and provides a clear overview. See the following example:  
+
+  \begin{figure}[!ht]
+    \centering
+    \includegraphics[width=1\textwidth]{pics/synoptic3.png} % Passe die Breite nach Bedarf an
+    \caption{Example: Synoptic transcription of the \emph{Tattvayogabindu}'s witnesses.}
+     \phantomsection\label{fig:synoptic3}
+\end{figure}
+
+This one example (Figure \ref{fig:synoptic3}) of one sentence illustrates the frequent structural differences as they recur consistently. It became apparent during the transcription of the textual witnesses that the transmission of the Urtext or archetype (\alpha) divides into two main branches, each traceable to a hyparchetype.\footnote{Paolo Trovato and others explain the very high rate of lost archetypes and two-branched stemmata by ``the high (90\%) rate of extinction of individual copies'', cf. \citeauthor[2017: 86]{trovato2017}.} Both hyparchetypes not only differ structurally but also share most of their readings and key errors.
+
+I refer to the first hyparchetype as \beta (\getsiglum{D}, \getsiglum{J}, \getsiglum{K1}, \getsiglum{K3}, \getsiglum{N1}, \getsiglum{N2}, \getsiglum{U1}, and \getsiglum{V}) for two simple reasons: this group contains the two oldest dated witnesses and, in all likelihood, a structural arrangement that is closer to the original than the \gamma-group, which contains additional material in some places and often clearly comparatively degenerated variants. Although the \beta-group frequently contains errors, in many cases there is at least one manuscript whose reading is entirely convincing. The oldest dated manuscript \getsiglum {V} is from 1694 CE. The second-oldest dated witness is \getsiglum{N1} (1716 CE) from Nepal. 
+
+I collated all manuscripts of the \beta-hyparchetype except for \getsiglum{V} and \getsiglum{K3}. Already when transcribing \getsiglum{V}, it became clear that despite its age, it is full of errors, conflation of sentences, and a redactor who was messing around with what was in his exemplar. A collation of this manuscript would have pushed the size of the critical apparatus to unbearable extremes and was thus eliminated. \getsiglum{K3}, a manuscript kept in Kolkata in the Asiatic Society, might have been interesting to collate, but I was only able to buy copies of the first 6 of 25 folios due to a restrictive policy. Those folios contained no useful and interesting new variants. 
+  
+  I refer to the second hyparchetype as \gamma (\getsiglum{B}, \getsiglum{C}, \getsiglum{E}, \getsiglum{K2}, \getsiglum{L}, \getsiglum{P}, \getsiglum{P2}, \getsiglum{S} and \getsiglum{U2}). This hyparchetype is further apart from the archetype but very significant, as its transmission contains almost the entire text with only a few isolated \textit{lacunae}. The manuscripts that go back to the \gamma-hyparchetype proved to be important for the reconstruction of the text, particularly in those instances in which the \beta-manuscripts are clearly corrupt.
+
+  I eliminated \getsiglum{C}, \getsiglum{P2}, \getsiglum{K2}, and \ģetsiglum{S}, which are manuscripts I found after the submission of the dissertation, which, after transcribing and thoroughly checking their variants, clearly provided no helpful new variants for reconstructing the text. Furthermore, the critical apparatus would have grown even larger without any benefit. Thus, the work became superfluous.
+  
+  There is no detectable contamination between the \beta and \gamma archetypes, making editorial practice easier and using computerised stemmatics more reliable. Although both groups contain numerous errors and are equally indispensable for reconstructing of the archetype, the \beta-hyparchetype stands closer to the archetype than its \gamma-counterpart, even once \gamma-interpolations are excluded. In practice, while \beta-readings are more often favourable, readings of one group frequently illuminate and correct corruptions in the other, and meaningful emendation is often possible only by contrasting both archetypes.
 
 
-\chapter{Conventions in the Critical Apparatus}
-\section{Sigla in the Critical Apparatus}
+\subsubsection{Microstructure}
 
-\begin{itemize}
-\item \beta : \getsiglum{D}, \getsiglum{J}, \getsiglum{K1}, \getsiglum{N1}, \getsiglum{N2}, \getsiglum{U1}
-\item \gamma : \getsiglum{B}, \getsiglum{E}, \getsiglum{L}, \getsiglum{P}, \getsiglum{U2}
-\item B : Bodleian Oxford D 4587
-\item C : \emph{Haṭhasaṅketacandrikā} GOML Ms. No. R 3239
-\item C\textsubscript{pc} : \emph{Haṭhasaṅketacandrikā} GOML Ms. No. R 3239
-\item cett.: ceteri (all manuscripts except the ones mentioned in the lemma)
-\item \Done : IGNCA 30019
-\item E : Printed Edition
-\item J : JNUL Ms. No. 55769
-\item Jo : \emph{Haṭhasaṅketacandrikā} MMPP MS. No. 2244
-\item \Kone : AS G 11019
-\item L : Lalchand Research Library LRL5876
-\item M : \emph{Haṭhasaṅketacandrikā} ORI Ms. No. B 220
-\item \Ntwo : NGMPP B 38-35 / A 1327-14
-\item \None : NGMPP B 38-31
-\item P : Pune BORI 664
-\item PT : \emph{Prāṇatoṣiṇī}
-\item \Uone : SORI 1574
-\item \Utwo : SORI 6082
-\item V : OI MSU 10558
-\item YK : \emph{Yogakarṇikā}% 
-\item YSv : \emph{Yogasvarodaya}
-\end{itemize}
+Thus, the \alpha-archetype splits into the \beta and \gamma-hyparchetypes. The following observations provide further details regarding the microstructure of the stemma.
+
+\textbf{\beta-hyparchetype}: Witness \getsiglum{N2} is either the exemplar of \getsiglum{N1} or a direct copy because both manuscripts share the same substantial \textit{lacuna} of \approx 25\% of the whole text. It is more likely that \getsiglum{N2} is \getsiglum{N1}'s exemplar because it contains two sentences that are missing in \getsiglum{N1}. Both manuscripts were collated, as there are occasional minor discrepancies, likely corrections by the scribe of \getsiglum{N1} which proofed to be useful. Obwohl beide Handschriften immernoch zahlreiche Fehler, wurde während der Textrekonstruktion klar, dass es sich, zumindest in den 75\% überlieferten Teil des Textes durchschnittlich um die besten Lesarten handelt und \getsiglum{N1} und \getsiglum{N2} somit von allen überlebenden Textzeugen dem Archetypen (\alpha} am nächsten stehen.  
+  
+There are only three \beta-witnesses that contain the whole text: \getsiglum{K1}, \getsiglum{J} and \ģetsiglum{U1}.  The latter two must form a separate branch, and one mut assume that either both derive from the same exemplar, or, that \getsiglum{U1} directly derives from \getsiglum{J}, as they in die majority of cases share their specific readings but \getsiglum{U1} introduces many more minor scribal errors. 
+%---------------------
+%yasya           parimalo manaso vacaso na gocaraḥ // \E
+%yasya           parimalo manasā vacasā na gocaraḥ /  \P
+%yasya           parimalo manasā vacasāgocaraḥ /  \L
+%yasya           parimalo manasā vacasā na gocaraḥ /  \B
+%yasya           parimalo manasā vacasā na gocaraḥ /  \N1
+%yasya           parimalo manasā vacasā na gocara /   \N2
+%yasya           parimalo manasā vacasā na gocaraḥ /  \D
+%yasya           parimalo manasā vacasā na gocaraḥ /  \K1
+%yasya           parimalo vacasā manasā na gocaraḥ //  \J
+%yasya           parimalo vacasā manasā na gocaraḥ    \U1
+%yasya kamalasya parimalo manasā vācā   na gocara ..  \U2
+%---------------------
+Furthermore, there is a lot of evidence, that also  \getsiglum{D} and \getsiglum{K1} belong to a sub-branch of \beta. However, a direct copy-relation can be ruled out, as \getsiglum{D} contains several specific \textit{lacunae} that are absent in \getsiglum{K1}
+% example
+
+
+ Among the nine available textual witnesses of the \gamma-group is the printed edition \getsiglum{E}, based on a hitherto unknown manuscript.\footnote{After the submission of the dissertation, I got hold of \manuscript{S}, which is either the exemplar \getsiglum{E} or both go back to the same exemplar.} The Pandit editor attempted to correct poorly transmitted text passages by his \textit{divinatio}. Unfortunately, apart from some grammatical emendations, he often failed in this endeavour. \getsiglum{U2} contains a considerable amount of additional material on the nine \textit{cakra}s but is clearly the best representative of the \gamma-hyparchetype, as many readings correspond more frequently with \beta-hyparchetype than the rest of the \gamma-manuscripts. 
+  
+  A further branching of manuscripts splits from the \gamma-group, comprising \getsiglum{B} and \getsiglum{L}. These contain the worst and most erroneous transmission of the text by far. Surprisingly, in some rare cases, they provided the decisive and only convincing reading, making their inclusion in the collation laborious but indispensable. Overall, the \gamma-group is noted for containing additional material in some passages, usually verse insertions that elaborate on a specific term. These were critically edited with the available witnesses and included in the grayscale as they provide fascinating insights into the reception history of the text.
+  
+
+β-Group. P is consistently the best β-witness across nearly all computational models (except parsimony). Nonetheless, it cannot be a direct copy of the β-hyparchetype; rather, it must descend from an intermediary exemplar from which B, L, and the printed edition also derive.
+
+B and L are the most corrupt witnesses in the entire tradition. Their numerous, but frequently divergent, errors exclude direct dependence and require a further intermediate ancestor already containing most of their shared corruptions—a relationship confirmed by every computational tree.
+
+U2 was initially underestimated owing to extensive additions in sections IV–XXII; when these are excluded, U2 stands remarkably close to the β-hyparchetype according to all models.
+E, edited by a pandit, lacks many minor orthographic errors but contains several misguided “corrections”; a major transposition is attributable to a folio swap. E stands near P but cannot derive directly from it, again necessitating an intermediary, as also indicated by the computational analyses.
+
+  
+
+  
+As the heuristic basis for reconstructing the archetype of Rāmacandra’s text that approximates the original more closely than any surviving witness, I selected ten manuscripts and one printed edition, together with the two key textual sources—the \emph{Yogasvarodaya} (known only from quotations in the \textit{Prāṇatoṣi(a)ṇī} and the \textit{Yogakarṇikā}) and the \emph{Siddhasiddhāntapaddhati}—as well as the \emph{Śabdakalpadruma}, whose entry on “Haṭhayoga” cites the \emph{Yogasvarodaya}. In addition, two testimonia were taken into account: the \emph{Yogasaṃgraha}, a loosely arranged anthology of yogic passages (preserved in a single IGNCA manuscript), which quotes sections II–XXII in sequence; and Sundaradeva’s \emph{Haṭhasaṅketacandrikā}, which reproduces the section on the sixteen \emph{ādhāra}s and the five \emph{lakṣya}s without attribution. All witnesses were collated in order to identify variant readings and to establish systematic correspondences among them. In particular, the sources—presented throughout the critical edition in the first layer of the apparatus—proved especially valuable in difficult editorial decisions, offering decisive clues for the most plausible emendations and, where appropriate, conjectures. It is important to note that separating these sources from the variants of the textual witnesses was both methodologically sound and necessary: Rāmacandra transforms the verses into prose and does not copy any of his sources verbatim. 
+
+  
+
+\subsection{Computer Stemmatics applied to the \textit{Tattvayogabindu}}
+
+For the final constitution of the \textit{stemma codicum}, all transcriptions of the entire \emph{Tattvayogabindu} were analyzed using common algorithms from phylogenetic software tools for stemmatic analysis. The dataset was stored in the Nexus format. The numerous gaps in the transmission were coded as non-significant sites in the data to prevent the results from being distorted by the large \textit{lacunae} or the interpolations of the \gamma-group, particularly manuscript \getsiglum{U2}. The results were compared with my philological observations, and the findings of both approaches were combined. Here, I present three phylogenetic trees which support and complement my philological considerations. This work serves as an example of how such computer-assisted methods can be applied to stemmatic analysis in a less complex transmission like that of the \emph{Tattvayogabindu}, to create a \textit{stemma codicum} based on empirical data, harmonizing the empiricism of phylogenetic analysis with the expertise of the philologist. No computer-generated tree can automatically provide an optimal representation of a text's transmission.\footnote{Cf. \citeauthor{baptiste2020} (2020: 339-356) for an overview of the criticism digital methods have faced since their inception.} In the case of cladistic analysis with Maximum Parsimony, \citeauthor{maas2009stemma} explains that this arises because the strict bifurcating structure of that type of computer-generated tree, in which every existing textual witness is connected by exactly one line to a single inferred witness, cannot account for the contamination in the tradition. In the special case of \emph{Tattvayogabindu}, however, there is no contamination between the \beta and \gamma groups, which makes the application of such phylogenetic algorithms to the tradition much less susceptible to errors. Furthermore, the bifurcating structure cannot represent cases where some copies were made more than once and more than one copy has survived. In the computer-generated tree of the cladistic method, every existing manuscript is represented as a copy of an inferred witness, which is inaccurate; in most text transmissions, numerous manuscripts are copies of other existing manuscripts.\footnote{See \citeauthor[2009: 80]{maas2009stemma}.} If the editor is aware of these issues, knows his text's transmission well, and understands the mechanisms of the algorithms and their results, the wrongly assumed bifurcations and contamination of certain computer-generated models can be detected. Only then can computer-generated models, like cladistic analysis, inform and thus improve the editor's decisions to manually draw a plausible and data-based \emph{stemma codicum} that reflects the underlying transmission of the text as well as possible.
+
+\subsubsection{Tree 1: Maximum Parsimony} 
+
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{pics/paup-tree.png} % Passe die Breite nach Bedarf an
+    \caption[Tree 1: Maximum Parsimony]{Generated with Mesquite Version 3.81 (build 955). \textbf{Algorithm}: \textit{Parsimony Tree Analysis} with PAUP 4.a168. \textbf{Dataset}: Full collation of the \emph{Tattvayogabindu}.}
+     \phantomsection\label{fig:paup-tree}
+\end{figure}
+
+The phylogenetic analysis method based on the \textit{Maximum Parsimony} algorithm is one of the most widely used methods for stemmatic analysis in philology.\footnote{\textit{Maximum Parsimony} calculates all possible bifurcating trees and searches for the most parsimonious tree (the one requiring the fewest changes) among them. \textit{Maximum Parsimony} groups manuscripts according to their shared derived characters. Only parsimony informative sites in the data are used for the \textit{Maximum Parsimony} analysis. A site within the data is considered informative if it consists of more than one variant and at least two variants are recorded at least twice. All other sites are excluded, cf. \citeauthor{windram2008} (2008: 445-446).} The tree (Figure \ref{fig:paup-tree}) has an excellent CI (Consistency Index) of 0.869. This means that the proposed tree structure can explain about 87\% of the phylogenetic tree's trait changes. My earlier observation that the manuscripts divide into two main groups was an explicit criterion for placing the tree's root precisely between these two groups, a division also supported by the \textit{Maximum Parsimony} algorithm. However, this tree has two apparent weaknesses. It does not recognize that \getsiglum{N2} is a direct copy of \getsiglum{N1}. That is because of the above-mentioned strict bifurcating assumptions of the algorithm mentioned above, and the scribe of \getsiglum{N2} corrected some passages, making the character states closer to those of \getsiglum{U1}. The second weakness, indicated by the relatively low bootstrap score\footnote{Bootstrapping is a method to detect statistical support of phylogenetic trees, see \citeauthor{felsenstein1985} (1985). Bootstrapping is a test to determine whether the whole dataset supports the tree or if the tree is a marginal choice among several almost equal alternatives. That is accomplished by testing the tree with randomized subsamples of the dataset, then building trees from each of these and finally calculating the frequency with which the different parts of the tree are reproduced in each of these random subsamples. The bootstrap support is assigned according to the frequency of a specific group of manuscripts occurring in the subsample trees. If the specific group is found in every subsample tree, then the bootstrap support will be 100\%; if it is found in only half of the subsamples, it will have a bootstrap support of 50\%. Values of 70\% or higher are considered to indicate reliable groupings, cf. \citeauthor{sandra2003} (2003: 250).} of only 60 at the branching where \getsiglum{E} is located, and the bootstrap score of 71 at the branching where \getsiglum{P} is located. That is because the character states resulting from the editorial interventions of the Pandit of the printed edition cannot be smoothly explained by the computer in light of the remaining transmission. Therefore, the positions of \getsiglum{E} and \getsiglum{P} must be carefully considered. The position of \getsiglum{U2} was also surprising. With many interpolations, this manuscript might easily have been underestimated for its stemmatic relevance to the \gamma-group. However, its base text (excluding the interpolations) conserves an important transmission stage of the \gamma-group.
+
+\subsubsection{Tree 2: Neighbour-joining} 
+
+These are two unrooted Neighbor-joining trees (Figure \ref{fig:nj-tree}). \footnote{\textit{Neighbor-joining} is a particular approach to phylogenetic analysis that SplitsTree can execute. The primary mechanism behind this is a hierarchical clustering technique, see \citeauthor[1987]{nei1987}. A concise explanation by the authors is as follows: ``The principle of this method is to find pairs of operational taxonomic units (OTUs [= neighbours]) that minimize the total branch length at each level of clustering of OTUs starting from a star-shaped tree. The branch lengths and topology of a parsimonious tree can be quickly determined using this method.'' In this case, it can be visualized as follows: The algorithm is fed with a diverse set of texts in the form of manuscript transcripts, which act as operational taxonomic units. \textit{Neighbor-joining} divides them into smaller groups with shared features.
+First, the algorithm measures the distance of each possible pair of manuscripts. This distance indicates how different or similar they are regarding specific features. Then, the algorithm finds the two manuscripts with the smallest distance between them. These are the ``closest neighbours'' in terms of similarity. These two individual manuscripts are then joined together to form a node. This node represents an assumed common ancestor. The algorithm then recalculates the distances between this newly created node and all other manuscripts. These distances reflect each manuscript's overall similarity or dissimilarity to the new node. The process repeats and identifies the next pair of nearest manuscripts or groups of manuscripts, creates the next node, and adjusts the distances. In this way, a phylogenetic tree is created. The function repeats these steps until all manuscripts and groups of manuscripts are connected in an undirected tree-like structure in which the length of the branches and the distance between the nodes represent the relationships of the manuscripts based on their similarities. Neighbour-joining assumes a constant rate of evolution across all lineages, and branch lengths correspond to evolutionary distances. The resulting trees can vary considerably depending on how the data are coded and how gaps are treated. The application of \textit{neighbor-joining} to support philological work is discussed by \citeauthor{stemmamethods} (2020: 319).} They are based on the same dataset. The only difference lies in the distance measures used to quantify the evolutionary distance between sequences of \textit{akṣara}s.
+
+These distances are then used to construct phylogenetic trees. The left tree uses the Gene Content Distance,\footnote{The Gene Content Distance is a measure used to compare the presence or absence of genes across different genomes. The distance between two genomes is calculated based on the differences in their gene content, cf. \citeauthor[2004]{huson2004}. Instead of gene content, in our case, the presence or absence of \textit{akṣara}s is compared.} while the right tree uses the standard p-distance, a simple measure of sequence divergence.\footnote{The ``Uncorrected P'' or p-distance calculates the proportion of nucleotide or amino acid sites at which two sequences differ. The calculation of Uncorrected P is simple. The number of differing sites is divided by the total number of sites compared; see \citeauthor[2022: 46]{huson2022}.} The results differ only slightly, but in my assessment, the trees of both distances correspond with key philological observations, particularly regarding the \beta-group. While the tree using the Gene Content Distance reflects the close relationship between \getsiglum{N1} and \getsiglum{N2}, it does not show that \getsiglum{N1} is the manuscript closest to the archetype \beta. Conversely, this relationship is correctly depicted in the tree using p-distance (Uncorrected P).
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{pics/tree-nj-x.png} % Passe die Breite nach Bedarf an
+    \caption[Tree 2: Neighbour-joining network]{Generated with SplitsTree 4 version 4.19.2. \textbf{Algorithm}: \textit{Neighbor-joining} (unrooted). Two trees with identical algorithms and datasets but different distance measures. \textbf{Distance} (left): Gene Content Distance. \textbf{Distance} (right): Uncorrected P. \textbf{Dataset}: Full collation of the \emph{Tattvayogabindu}.}
+     \phantomsection\label{fig:nj-tree}
+\end{figure}
 \newpage
+\subsubsection{Tree 3: Minimum Spanning Tree}
+
+Another vital aspect is illustrated by the \textit{Minimum Spanning Tree} (Figure \ref{fig:tree-minspan}).\footnote{The algorithm underlying the \textit{Minimum Spanning Tree} calculates an undirected and unrooted tree-shaped graph representing the simplest way to connect all the manuscripts by minimizing the corresponding nodes based on their pairwise distances, see e.g. \citeauthor{stemmamethods} (2020: 317). Also see \citeauthor{cormen2009introduction} (2009). Furthermore, see \citeauthor{huson2022} (2022: 43). The goal of the \textit{Minimum Spanning Tree} is to calculate the connections between the manuscripts so that the total length to connect all manuscripts settles on the minimum. The \textit{Minimum Spanning Tree} thus, in our use case, represents the simplest and most efficient way to connect a set of manuscripts while minimizing the total distance (based on their differences) of the connections. The resulting tree is far from a stemma and does not include hypothetical ancestral nodes at branching points; any shown branching point corresponds to a manuscript in every case.} A \textit{Minimum Spanning Tree} can help to confirm important manuscripts due to its algorithmic properties. In our case, it highlights the central manuscripts of the two groups, namely \getsiglum{N1} for the \beta-group and \getsiglum{P} for the \gamma-group, which perfectly aligns with the philological observation. The \textit{Minimum Spanning Tree} algorithm has only been used rarely in philology. Further experiments with different text traditions with known stemma would be necessary to determine whether these valid results occur repeatedly. 
+
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{pics/tree-minspan.png} % Passe die Breite nach Bedarf an
+    \caption[Tree 3: Minimum Spanning Tree]{Generated with SplitsTree App 6.3.12. Algorithm: \textit{Minimum Spanning Tree}. Distance: Uncorrected P. \textbf{Dataset}: Full collation of the \emph{Tattvayogabindu}.}
+     \phantomsection\label{fig:tree-minspan}
+\end{figure}
+
+\subsubsection{Stemma codicum}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{pics/stemma.pdf} % Passe die Breite nach Bedarf an
+    \caption[Stemmatic hypothesis]{Stemmatic hypothesis of the \emph{Tattvayogabindu}.}
+     \phantomsection\label{fig:stemma}
+\end{figure}
+
+The cumulative evidence from the phylogenetic algorithms, combined with my philological observations and considerations, leads to the following \textit{stemma codicum} (Figure \ref{fig:stemma}) of the \emph{Tattvayogabindu}. This graph represents a plausible hypothesis of the relationships between the textual witnesses based on the current state of knowledge, forming the foundation upon which the critical edition presented in this dissertation was prepared.
 
 \chapter[Critical Edition \& Annotated Translation of the \emph{Tattvayogabindu}]{The \emph{Tattvayogabindu} of Rāmacandra \\ \huge  
   Critical Edition \& Annotated Translation}
 \pagestyle{chapter2style}
 \newpage
 
-
-
-\cleardoublepage
+\newpage
 \selectlanguage{english}
 \chapter{Appendix}
 \section{Figures}
