--- a/intro.bib
+++ b/intro.bib
@@ -538,6 +538,15 @@ keywords={seclit},
   keywords   = {catalogues},
 }%!
 
+@book{orl_srinagar2021,
+  title        = {Catalogue of Sanskrit Manuscripts at the Oriental Research Library, Srinagar},
+  author       = {Indira Gandhi National Centre for Arts},
+  howpublished = {Digital catalogue, Oriental Research Library, Srinagar},
+  institution  = {Indira Gandhi National Centre for Arts (IGNCA)},
+  year         = {2021},
+  url          = {https://archive.org/details/jk-orl-srinagar-sanskrit},
+}
+
 @book{newcataloguscatalogorum23,
   author = {Raghavan, V. and Narang, S. P. and Bhattacharya, D. C.},
   title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
